fixed spacing in rencana page

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -10,10 +10,15 @@
     -webkit-user-drag: none;
 }
 
+.outer-input {
+    width: 100%
+}
 
 input.inputBox {
-    font-size: 22px;
+    font-size: 20px;
+    text-align: right;
     font-weight: 600;
+    text-indent: -3.6px;
     padding: 15px 60px;
     color: #006CAA;
     border-radius: 8px;
